Fix filter name overflow issue

--- a/frontend/src/css/property-list.css
+++ b/frontend/src/css/property-list.css
@@ -6,6 +6,10 @@ input[type=checkbox] {
 	width: 1em;
 }
 
+.property-list {
+	overflow: hidden;
+}
+
 .property-list > summary {
 	align-items: center;
 }
@@ -48,6 +52,7 @@ details.property-list[open] > summary::before {
 .property-list > header > *,
 .property-list > footer > * {
 	flex: 1;
+	flex-wrap: nowrap;
 }
 
 .property-list > * > * {
